Wed Nov 14 16:22:25 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* __pid_t -> pid_t in lib/silccrypt/silcrng.c.  A patch by
	  johnny.

	* Write PID file after dropping privileges.  Added -F option
	  to run server on foreground.  A patch by debolaz.
	  Affected files silcd/server.c, silcd/silcd.c.

Wed Nov 14 00:18:08 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed the silc_idcache_list_* routines to really support
	  the dynamic list.  Fixes a crash.  Affected file is
	  lib/silccore/silcidcache.c.

	* Fixed the LIST command reply to really call LIST command's
	  pending callbacks.  Affected file silcd/command_reply.c.

Tue Nov 13 00:49:17 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Update conn->local_entry->nickname after giving NICK
	  command.  Affected file lib/silcclient/command.c.

Sun Nov 11 23:43:02 PST 2001  Brian Costello <bc@wpfr.org>

	* Added the [pid] option to the silcd configuration file

	  Affected files: serverconfig.[ch] and silcd.c

Sun Nov 11 23:56:39 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Save fingerprint in WHOIS command reply in server.
	  Affected file silcd/command_reply.c.

	* Fixed NICK commands pending callback registration.
	  Affected file lib/silcclient/command.c.

Sun Nov 11 10:49:10 EET 2001  Pekka Riikonen <priikone@silcnet.org>

	* Use ++server->cmd_ident when sending commands in server,
	  instead of random number.  Affected file silcd/command.c.

	* Fixed GETKEY command reply to call actually GETKEY pending
	  command callbacks.  Affected file silcd/command_reply.c.

	* A bit stricter check for nicknames.  Check for same nickname
	  in NICK command also.  Affected file silcd/command.c.

	* Do not call INFO command everytime client ID changes, only
	  during first connecting.  Affected file lib/silcclient/client.c.

	* Set the new nickname only after successful command reply for
	  NICK command is returned by server.  Affected file
	  lib/silcclient/command.c.
